Make sure the menu doesn't collapse if it happens to get empty

--- a/share/web/static/css/app-shared.css
+++ b/share/web/static/css/app-shared.css
@@ -23,6 +23,7 @@ div#navigation {
 
 div#navigation ul {
     width: 100%;
+    height: 11px;
 }
 
 #content h1 {
